# q-cold-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
.codex/: AGENT_REGISTRY.md  config.toml
.codex/agents/: architect_planner.toml  delivery_worker.toml  ops_guard.toml  quality_auditor.toml  surgical_worker.toml
.codex/personas/: ARCHITECT_PLANNER.md  DELIVERY_WORKER.md  OPS_GUARD.md  QUALITY_AUDITOR.md  ROOT_ORCHESTRATOR.md  SURGICAL_WORKER.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/slim/: devcontainer.json
.github/workflows/: preflight.yml
docs/: architecture-frontend-hardening.md  codex-hooks.md  include-boundaries.md  queue-state-model.md  queue-status-reducer-architecture.md  taskflow-extraction-backlog.md  terminal-backlog.md
docs/taskflow-extraction/: 01-task-process-model.md  02-repository-capability-contract.md  03-task-open-core.md  04-environment-container-lifecycle.md  05-agent-work-slice-orchestration.md  06-resource-governance.md  07-run-telemetry.md  08-closeout-bundles-cleanup.md  09-source-adapter-migration.md  README.md  execution-slices.md  roadmap.md
scripts/: preflight.sh
src/: agents.rs  app.rs  history.rs  lib.rs  main.rs  node_agent.rs  output_guard.rs  prompt.rs  queue.rs  queue_help.txt  queue_tabs.rs  queue_tests.rs  repo_bundle.rs  repository.rs  rollout.rs  state.rs  status.rs  telegram.rs  test_support.rs  tui.rs  webapp.rs  wsl.rs
src/adapter/: mod.rs
src/app/: tests.rs  (+7 more)
tests/: agent_repo_context.rs  command_version.rs  devcontainer_contract.rs  output_guard.rs  task_flow_control_plane.rs  task_flow_record_sync.rs  task_flow_regression.rs  task_record_refresh.rs  task_record_remote_sync.rs  task_record_sequence.rs
xtask/: Cargo.toml
(+102 files in other folders)
