[package]
name = "qcold"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "cargo-qcold"
path = "src/main.rs"

[[bin]]
name = "qcold"
path = "src/qcold.rs"

[workspace]
members = [".", "xtask"]
resolver = "2"

[dependencies]
anyhow = "1.0"
axum = "0.7"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
futures-util = "0.3"
libc = "0.2"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1.40", features = ["net", "rt-multi-thread", "time"] }
ureq = { version = "2.12", default-features = true, features = ["json"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"

[lints]
workspace = true

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
missing_docs = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -3 }
pedantic = { level = "warn", priority = -2 }

missing_safety_doc = "deny"
undocumented_unsafe_blocks = "deny"

dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
expect_used = "deny"

cognitive_complexity = "deny"
too_many_lines = "deny"
type_complexity = "deny"

redundant_clone = "warn"
inefficient_to_string = "warn"
large_enum_variant = "warn"
match_same_arms = "warn"
implicit_clone = "warn"
manual_assert = "warn"
semicolon_if_nothing_returned = "warn"
unused_self = "warn"
wildcard_imports = "warn"
needless_pass_by_value = "warn"
module_name_repetitions = "warn"
must_use_candidate = "warn"
return_self_not_must_use = "warn"
